fix alignment

--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,35 @@
 
 #root {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    background-color: aquamarine;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.calculator-container {
+    background-color: rgb(70, 60, 60);
+    width: 350px;
+    height: 520px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+}
+
+.calculator-display {
+    background-color: ghostwhite;
+    border: 2px solid gray;
+    height: 80px;
+    width: 300px;
 }
 
 .button-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
+    width: 300px;
+    height: 400px;
 }
